--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "pm2:start": "pm2 start ecosystem.config.js --env production",
+    "pm2:stop": "pm2 stop exbitbot",
+    "pm2:restart": "pm2 restart exbitbot",
+    "pm2:reload": "pm2 reload exbitbot",
+    "pm2:delete": "pm2 delete exbitbot",
+    "pm2:logs": "pm2 logs exbitbot",
+    "pm2:monit": "pm2 monit",
+    "pm2:status": "pm2 status"
   },
   "dependencies": {
     "clsx": "^2.1.1",
