--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 # Telegram Bot Configuration для статического сайта
 # Создайте бота через @BotFather в Telegram и получите токен
-TELEGRAM_BOT_TOKEN=your_bot_token_here
+TELEGRAM_BOT_TOKEN=7834134024:AAG0qcxshpK_-pyo-ay9OMI4lwv9Gtcw5iU
 
 # ID чата или канала куда будут отправляться заявки
 # Для получения ID чата напишите боту @userinfobot
-TELEGRAM_CHAT_ID=your_chat_id_here
+TELEGRAM_CHAT_ID=591431818
