--- a/env.example
+++ b/env.example
@@ -1,7 +1,11 @@
-# Telegram Bot Configuration для статического сайта
+# Telegram Bot Configuration
 # Создайте бота через @BotFather в Telegram и получите токен
 TELEGRAM_BOT_TOKEN=7834134024:AAG0qcxshpK_-pyo-ay9OMI4lwv9Gtcw5iU
 
 # ID чата или канала куда будут отправляться заявки
 # Для получения ID чата напишите боту @userinfobot
 TELEGRAM_CHAT_ID=591431818
+
+# Яндекс.Метрика
+# ID счетчика Яндекс.Метрики
+NEXT_PUBLIC_YANDEX_METRIKA_ID=104320310
